# the-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTROLS.md  FLOW.md  LICENSE  README.md  README_CONTROLS.md  bootstrap.bat  bootstrap.sh  build.bat  build.sh  compile_commands.json  repomix.config.json  vcpkg.json
apps/: CMakeLists.txt  main.cpp
dep/dotnet-runtime-8.0.16/: .gitignore  libnethost.lib
dev-progress/: current-progress.md
dev-tools/: logcscode.py  requirements.txt
game/: Attributes.cs  Benchmark.cs  Components.cs  EngineBinding.cs  Game.cs  Game.csproj  GameScript.cs  PluginBootstrap.cs  README.md  VALIDATION_RESULTS.md  interimPresentation.md  interimReport.md
managed/: Components.cs  HelloManaged.cs  MyStruct.cs  Transform.cs
resources/configs/: DefaultConfig.toml
resources/models/arena/: license.txt  scene.gltf
resources/models/blender-monkey/Rat-Pack-All-Files/: mouse_2.gltf  rat.blend
resources/models/chest/: Futuristic_Chest_1.gltf
resources/models/core/: license.txt  scene.gltf
resources/models/desert/: license.txt  scene.gltf
resources/models/fnaf/: license.txt  scene.gltf
resources/models/king/: Gao_Elephant_Kong.fbx  Gao_Elephant_Kong_black_version.fbx
resources/models/rat/: rat_single.blend  rat_single.gltf
resources/models/sci_sword/: sword.gltf
resources/models/table/: license.txt  scene.gltf
resources/shaders/: default.frag  default.vert  frag.glsl  vert.glsl
resources/shaders/include/: sharedVariables.glsl
resources/shaders/include/core/: cnoise.glsl  definitions.glsl  packer.glsl  postProcessing.glsl  sharedVariables.glsl
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/app/: Application.cpp  Application.hpp  BlockState.hpp  CMakeLists.txt
src/app-context/: CMakeLists.txt  VulkanApplicationContext.cpp  VulkanApplicationContext.hpp
src/app-context/context-creators/: Common.hpp  ContextCreators.hpp  DeviceCreator.cpp  DeviceCreator.hpp  InstanceCreator.cpp  InstanceCreator.hpp  SurfaceCreator.cpp  SurfaceCreator.hpp  SwapchainCreator.cpp  SwapchainCreator.hpp
src/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/config/: RootDir.h.in
src/config-container/: CMakeLists.txt  ConfigContainer.cpp  ConfigContainer.hpp
src/config-container/sub-config/: ApplicationInfo.cpp  ApplicationInfo.hpp  CameraInfo.cpp  CameraInfo.hpp  DebugInfo.cpp  DebugInfo.hpp  ImguiManagerInfo.cpp  ImguiManagerInfo.hpp  RendererInfo.cpp  RendererInfo.hpp  TerrainInfo.cpp  TerrainInfo.hpp  TracingInfo.cpp  TracingInfo.hpp
src/dotnet/: CMakeLists.txt  Components.hpp  Engine.hpp  InputTestSystem.hpp  InputWrapper.hpp  MyStruct.hpp  RuntimeApplication.cpp  RuntimeApplication.hpp  RuntimeBridge.cpp  RuntimeBridge.hpp  TestManaged.cpp  TestManaged.hpp  Transform.hpp
src/imgui-manager/: CMakeLists.txt
src/imgui-manager/gui-elements/: FpsGui.cpp  FpsGui.hpp  GameStatsGui.cpp  GameStatsGui.hpp
src/imgui-manager/gui-manager/: ImguiManager.cpp  ImguiManager.hpp
src/imgui-manager/imgui-backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/input/: CMakeLists.txt  InputSystem.cpp  InputSystem.hpp
src/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  ShaderSharedVariables.hpp
src/shader/: main.glsl  shared.inl
src/shaders/: frag.glsl  vert.glsl
src/utils/: CMakeLists.txt
src/utils/color-palette/: Color.hpp  ColorPalette.hpp
src/utils/config/: RootDir.h  RootDir.h.in
src/utils/event-dispatcher/: CMakeLists.txt  GlobalEventDispatcher.cpp  GlobalEventDispatcher.hpp
src/utils/event-types/: EventType.hpp
src/utils/fps-sink/: CMakeLists.txt  FpsSink.cpp  FpsSink.hpp  MovingAvg.cpp  MovingAvg.hpp
src/utils/image-loader/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp
src/utils/incl/: GlmIncl.hpp  ImguiIncl.cpp  ImguiIncl.hpp  TomlIncl.cpp  TomlIncl.hpp  VkMemoryAllocIncl.hpp  VolkIncl.cpp  VolkIncl.hpp
src/utils/io/: CMakeLists.txt  FileReader.cpp  FileReader.hpp  ShaderFileReader.cpp  ShaderFileReader.hpp
src/utils/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/utils/model-loader/: CMakeLists.txt  ModelLoader.cpp  ModelLoader.hpp  ModelManager.cpp  ModelManager.hpp
src/utils/shader-compiler/: CMakeLists.txt  CustomFileIncluder.cpp  CustomFileIncluder.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp
src/utils/toml-config/: CMakeLists.txt  TomlConfigReader.cpp  TomlConfigReader.hpp
src/utils/vulkan-wrapper/: CMakeLists.txt
src/utils/vulkan-wrapper/descriptor-set/: DescriptorSetBundle.cpp  DescriptorSetBundle.hpp
src/utils/vulkan-wrapper/memory/: Buffer.cpp  Buffer.hpp  BufferBundle.cpp  BufferBundle.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp
src/utils/vulkan-wrapper/pipeline/: ComputePipeline.cpp  ComputePipeline.hpp  GfxPipeline.cpp  GfxPipeline.hpp  Pipeline.cpp  Pipeline.hpp
src/utils/vulkan-wrapper/sampler/: Sampler.cpp  Sampler.hpp
src/utils/vulkan-wrapper/utils/: SimpleCommands.cpp  SimpleCommands.hpp
src/window/: CMakeLists.txt  CursorInfo.hpp  KeyboardInfo.hpp  Window.cpp  Window.hpp
vengine/: VEngine.hpp
vengine/src/: Application.cpp  Application.hpp  CMakeLists.txt  Core.hpp  EntryPoint.hpp
